--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Kapil's Portfolio Website </title>
+    <title>İsmail Eren Duman's Portfolio Website </title>
     <link rel="stylesheet" href="style.css">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -29,9 +29,8 @@
           </div>
       </ul>
       <p align="right"> 
-        <a href="https://www.linkedin.com/in/kapil0123/" target="_blank" rel="noreferrer"> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="bash" width="40" height="40"/> </a>
-        <a href="https://github.com/Kapil987" target="_blank" rel="noreferrer"> <img src="https://cdn.cdnlogo.com/logos/g/55/github.svg" alt="aws" width="40" height="40"/> </a> 
-        <a href="https://stackoverflow.com/users/13574624/kapil" target="_blank" rel="noreferrer"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Stack_Overflow_icon.svg/768px-Stack_Overflow_icon.svg.png" alt="bash" width="40" height="40"/> </a> 
+        <a href="https://www.linkedin.com/in/ismail-eren-duman-42b26b191/" target="_blank" rel="noreferrer"> <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="bash" width="40" height="40"/> </a>
+        <a href="https://github.com/fakedupiece" target="_blank" rel="noreferrer"> <img src="https://cdn.cdnlogo.com/logos/g/55/github.svg" alt="aws" width="40" height="40"/> </a> 
     </p>
     </div>
     <div class="menu-btn">
@@ -44,14 +43,14 @@
    <div class="home-content">
      <div class="text">
        <div class="text-one">Hello,</div>
-       <div class="text-two">I'm Kapil</div>
-       <div class="text-three">DevOps Engineer</div>
-       <div class="text-four">From India</div>
+       <div class="text-two">I am İsmail Eren Duman</div>
+       <div class="text-three">Computer Engineering Student</div>
+       <div class="text-four">From Türkiye 🇹🇷</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
        <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
-       <a class="fcc-btn" href="https://www.linkedin.com/in/kapil0123/">Hire me</a>  
+       <a class="fcc-btn" href="https://www.linkedin.com/in/ismail-eren-duman-42b26b191/">Hire me</a>  
      </div>
    </div>
  </section>
@@ -67,11 +66,11 @@
     </div>
     <div class="right">
       <div class="topic">Integration Is My Passion</div>
-      <p>Innovative DevOps Engineer with 6+ years of experience in designing, implementing, automating, and managing cutting-edge deployment of cloud resources. <br> <br>Skilled and Experienced in AWS Cloud Iaas, Saas, Pass, Teradata, Python, Linux, and DevOps tools such as Git, Jenkins, Terraform, Ansible, Docker, and Kubernetes. Strong engineering professional with a Bachelor of Technology focused in Electronics & Communication Engineering and a PG diploma in Embedded Systems Holder. <br> <br>
-      Want to pursue a challenging career in an organization that utilizes me to my full potential and helps me to enhance my skills, ability, and knowledge.</p>
+      <p>Yazılım dünyasında tecrübemi yapay zekanın alt alanlarında genişleterek teknolojiye yön verici bir rolde bulunmak, bilgi birikimini inovasyon ve girişimlerle ürüne ve pratiğe dönüştürmek hedefiyle ilerliyorum. Bu anlamda ülkeme ve sektöre katkı sağlayabileceğim, Agile prensiplerine uygun, işbirlikçi ve dinamik bir ortamda kariyerime hız kazandırmak için fırsatlar arıyorum. <br> <br>
+      </p>
       <div class="button">
         <!-- <button>Download CV</button> -->
-        <a href="cv/kapil-Devops-6years.pdf"><button>Download CV</button></a>
+        <a href="CV.pdf"><button>Download CV</button></a>
       </div>
     </div>
   </div>
@@ -88,8 +87,8 @@
        <div class="topic">Skills Reflects Our Knowledge</div>
        <p>We know that digital and AI technologies are transforming the world of work and that today’s workforce will need to learn new skills and learn to continually adapt as new occupations emerg</p>
        <div class="experience">
-         <div class="num">6+</div>
-         <div class="exp">Years Of <br> Experience</div>
+         <div class="num">2</div>
+         <div class="exp">Internship Experience <br> in Defense Industry</div>
        </div>
      </div>
      <div class="boxes">
@@ -184,7 +183,7 @@
       <p>Why wait, lets plan to connect. Connection and community improve engagement, retention, and well-being </p>
       <div class="button">
         <!-- <button>Let's Chat</button> -->
-        <a class="fcc-btn" href="https://www.linkedin.com/in/kapil0123/">Let's Chat</a>
+        <a class="fcc-btn" href="https://www.linkedin.com/in/ismail-eren-duman-42b26b191/">Let's Chat</a>
       </div>
     </div>
   </div>
@@ -193,7 +192,7 @@
 <!-- Footer Section Start -->
 <footer>
   <div class="text">
-    <span>Created By <a href="#">Kapil</a> | &#169; 2022 All Rights Reserved</span>
+    <span>Sourced By <a href="https://github.com/Kapil987">Kapil</a> | &#169; 2022 All Rights Reserved</span>
   </div>
 </footer>
 
