--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
        <div class="text-one">Hello,</div>
        <div class="text-two">I am İsmail Eren Duman</div>
        <div class="text-three">Computer Engineering Student</div>
-       <div class="text-four">From Türkiye 🇹🇷</div>
+       <div class="text-four">From Türkiye</div>
      </div>
      <div class="button">
        <!-- <button>Hire Me </button> -->
        <!-- <a href="https://www.google.com"><button>Hire Me</button></a> -->
-       <a class="fcc-btn" href="https://www.linkedin.com/in/ismail-eren-duman-42b26b191/">Hire me</a>  
+       <a class="fcc-btn" href="https://www.linkedin.com/in/ismail-eren-duman-42b26b191/">Visit for Recruitment</a>  
      </div>
    </div>
  </section>
@@ -62,7 +62,7 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="images/about.png" alt="">
+      <img src=fotom.png" alt="">
     </div>
     <div class="right">
       <div class="topic">Integration Is My Passion</div>
