--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src=fotom.jpg" alt="">
+      <img src=fotom.png" alt="">
     </div>
     <div class="right">
       <div class="topic">Integration Is My Passion</div>
