--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src=fotom.png" alt="">
+      <img src="fotom.png" alt="">
     </div>
     <div class="right">
-      <div class="topic">Integration Is My Passion</div>
-      <p>Yazılım dünyasında tecrübemi yapay zekanın alt alanlarında genişleterek teknolojiye yön verici bir rolde bulunmak, bilgi birikimini inovasyon ve girişimlerle ürüne ve pratiğe dönüştürmek hedefiyle ilerliyorum. Bu anlamda ülkeme ve sektöre katkı sağlayabileceğim, Agile prensiplerine uygun, işbirlikçi ve dinamik bir ortamda kariyerime hız kazandırmak için fırsatlar arıyorum. <br> <br>
+      <div class="topic">Leadership In Product Development Is My Passion</div>
+      <p>I'm advancing with the goal of expanding my experience in the software world into various subfields of artificial intelligence, aiming to play a leading role in shaping technology and transforming knowledge into products and practice through innovation and entrepreneurship. In this regard, I am looking for opportunities to accelerate my career in a collaborative and dynamic environment, aligned with Agile principles, where I can contribute to both my country and the industry. <br> <br>
       </p>
       <div class="button">
         <!-- <button>Download CV</button> -->
