--- a/index.html
+++ b/index.html
@@ -113,7 +113,21 @@
  </div>
 </section>
 
-
+<!-- Projects Section Start -->
+<section class="projects" id="projects">
+  <div class="content">
+    <div class="title"><span>Projects</span></div>
+  <div class="projects-details">
+    <div class="left">
+      <img src="Poster.png" alt="">
+    </div>
+    <div class="right">
+      <div class="topic">An innovative web project.</div>
+    </div>
+  </div>
+  </div>
+</section>
+  
 <!-- Contact Me section Start -->
 <section class="contact" id="contact">
   <div class="content">
