--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="title"><span>Projects</span></div>
   <div class="projects-details">
     <div class="left">
-      <img src="Poster.png" alt="">
+      <img src="Poster.png" alt="" style="width: 70%;">
     </div>
     <div class="right">
       <div class="topic">An innovative web project.</div>
